--- a/pizaamamafolio.html
+++ b/pizaamamafolio.html
@@ -27,12 +27,12 @@
     <table style="margin-left: 10vw;">
         <tr>
             <th class="l1"><div ></div></th>
-            <th class="img"> <a href=""><img style="width: 73vw;height: 40vw;" src="project1.jpg" alt=""></th></a>
+            <th class="img"> <a href="https://majdsaidi15.pythonanywhere.com/"><img style="width: 73vw;height: 40vw;" src="project1.jpg" alt=""></th></a>
             
         </tr>
         <tr>
             <td></td>
-            <td> <a href="">consulter le projet</a></td>
+            <td> <a href="https://majdsaidi15.pythonanywhere.com/">consulter le projet</a></td>
         </tr>
     </table>
     <iframe src="carteifram.html" frameborder="0"></iframe>
