--- a/galaxy.html
+++ b/galaxy.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>pizza mama</title>
+    <title>galaxy</title>
     <link rel="stylesheet" href="cvstyle.css">
 </head>
 <body>
@@ -15,7 +15,7 @@
    <a style="color: orangered;display: block;padding: 10px ; background-color:  rgba(128, 128, 128, 0.303);" href="index.html">Retour</a>
    <div style="height: 1vw;"  class="lign2"> <div style="top: 0;"></div></div>
    <h2 style=" font-size: 7vw; background-color:  rgba(128, 128, 128, 0.303);padding-bottom: 0;" >Portfolio</h2>
-   <p style="font-size: 4vw;padding: 0;" class="txt">site web pour restaurant</p>
+   <p style="font-size: 4vw;padding: 0;" class="txt">jeu mobile (galaxy)</p>
    <div class="triangle-down2" style="display: block;position: relative;"></div>
    <div style="display: block;height:50vw">
    <p style="display: block;position: relative;float: none;width: 90vw;margin:5vw;height:10vw;" class="esv">Sed a semper ex. Nunc vehicula vel odio ac fermentum. Aenean efficitur dolor mi, eu congue mi pharetra at. <br><br>Integer blandit libero et sapien tempus facilisis. Sed sollicitudin, metus in accumsan gravida, elit urna ultrices nisi, eget sagittis libero velit sit amet est. Aenean sed magna nec ex fermentum luctus. Mauris scelerisque, nulla vel euismod vulputate, mi risus commodo mauris, eu pulvinar metus purus eu nulla.
@@ -27,7 +27,7 @@
     <table style="margin-left: 10vw;">
         <tr>
             <th class="l1"><div ></div></th>
-            <th class="img"> <a href=""><img style="width: 73vw;height: 40vw;" src="project1.jpg" alt=""></th></a>
+            <th class="img"> <a href=""><img style="width: 73vw;height: 40vw;" src="Capture d’écran 2024-06-29 122058.png" alt=""></th></a>
             
         </tr>
         <tr>
