--- a/glove voice.html
+++ b/glove voice.html
@@ -27,7 +27,7 @@
     <table style="margin-left: 10vw;">
         <tr>
             <th class="l1"><div ></div></th>
-            <th class="img"> <a href=""><img style="width: 73vw;height: 40vw;" src="project1.jpg" alt=""></th></a>
+            <th class="img"> <a href=""><img style="width: 73vw;height: 40vw;" src="glove voice.png" alt=""></th></a>
             
         </tr>
         <tr>
