--- a/portfolioV1.html
+++ b/portfolioV1.html
@@ -21,7 +21,7 @@
         
         <img class="profil" src="profil.jpg" alt="">
         <h1>Majd Saidi</h1>
-        <p class="stit" style="font-size: 2vw;">dev freelance |  -5ans d'experience</p>
+        <p class="stit" style="font-size: 2vw;">dev freelance |  étudiant ingénieur en data science et  <br> intéligence artificile</p>
         <a class="botton" href="https://mail.google.com/mail/u/0/#inbox?compose=CllgCJZdjtdKDlLngqSdMJTnqLvvTCHSjhqDdPzRJQNjTzLmPFFmzvCqmdkxCdhFzGhplqpgrnq" target="_blank"> ME CONTACTER</a>
         <div class="rect" style="background-color: rgba(128, 128, 128, 0.303);position: absolute;display: block;width: 100%;height: 30%;bottom: 0;"></div>
         <div class="triangle-up" style="bottom: 30%;"></div>
@@ -33,8 +33,8 @@
 
     <h2 > En savoir plus</h2>
     <div class="esp">
-        <img class="img2" src="download.jpg" alt="">
-        <p class="esv">Passioné par la programation depuis le plus jeune age, je suis maintenant développeur professionnel avec plus de XX ans d'experience. <br> <br> Expert dans le dommaines du <b>web </b> et des <b>des programes python</b> je proposes mes services personnalisés pour des missions freelance <br> <br> <br> <a href="https://www.linkedin.com/in/majd-saidi-218922247/" target="_blank">En savoir plus sur profil Linkedin</a></p>
+        <img class="img2" src="Image-Article-développement-Web-830x554.jpg" alt="">
+        <p class="esv">Passioné par la programation depuis le plus jeune age, je suis maintenant développeur professionnel et aspirant data scientist specialisé en IA. <br> <br> Expert dans le dommaines du <b>web </b> et des <b>des programes python</b> je proposes mes services personnalisés pour des missions freelance <br> <br> <br> <a href="https://www.linkedin.com/in/majd-saidi-218922247/" target="_blank">En savoir plus sur profil Linkedin</a></p>
     </div> 
     <div class="triangle-up" style="display: block;position: relative;"></div>
     <h2 style="background-color: rgba(128, 128, 128, 0.303) ;">Portfolio</h2>
@@ -46,7 +46,7 @@
             </tr>
             <tr>
                 <td></td>
-                <td> <a href="https://majdsaidi15.pythonanywhere.com/">site web pour restaurant</a></td>
+                <td> <a href="">site web pour restaurant</a></td>
             </tr>
         </table>
         <table style="float: right;">
@@ -57,6 +57,50 @@
             <tr>
                 <td></td>
                 <td> <a href="">script backdoor attack</a></td>
+            </tr>
+        </table>
+    </div>
+    <div style="padding: 3vw;padding-bottom: 5vw; background-color:rgba(128, 128, 128, 0.303) ;" class="portf">
+        <table>
+            <tr>
+                <th class="l1"><div ></div></th>
+                <th class="img"><a href="galaxy.html"><img src="Capture d’écran 2024-06-29 122058.png" alt=""></th></a>
+            </tr>
+            <tr>
+                <td></td>
+                <td> <a href="">jeu mobil (galaxy)</a></td>
+            </tr>
+        </table>
+        <table style="float: right;">
+            <tr>
+                <th class="l1"><div ></div></th>
+                <th class="img"><a href="mrbeat.html"><img src="mrbeat.png" alt=""></th></a>
+            </tr>
+            <tr>
+                <td></td>
+                <td> <a href="">logiciel beat-maker (mrbeat)</a></td>
+            </tr>
+        </table>
+    </div>
+    <div style="padding: 3vw;padding-bottom: 5vw; background-color:rgba(128, 128, 128, 0.303) ;" class="portf">
+        <table>
+            <tr>
+                <th class="l1"><div ></div></th>
+                <th class="img"><a href="CCS.html"><img src="CCS.png" alt=""></th></a>
+            </tr>
+            <tr>
+                <td></td>
+                <td> <a href="">site web pour comité culturel et social</a></td>
+            </tr>
+        </table>
+        <table style="float: right;">
+            <tr>
+                <th class="l1"><div ></div></th>
+                <th class="img"><a href="glove voice.html"><img src="glove voice.png" alt=""></th></a>
+            </tr>
+            <tr>
+                <td></td>
+                <td> <a href="">glove voice</a></td>
             </tr>
         </table>
     </div>
