--- a/galaxy.html
+++ b/galaxy.html
@@ -18,11 +18,7 @@
    <p style="font-size: 4vw;padding: 0;" class="txt">jeu mobile (galaxy)</p>
    <div class="triangle-down2" style="display: block;position: relative;"></div>
    <div style="display: block;height:50vw">
-   <p style="display: block;position: relative;float: none;width: 90vw;margin:5vw;height:10vw;" class="esv">Sed a semper ex. Nunc vehicula vel odio ac fermentum. Aenean efficitur dolor mi, eu congue mi pharetra at. <br><br>Integer blandit libero et sapien tempus facilisis. Sed sollicitudin, metus in accumsan gravida, elit urna ultrices nisi, eget sagittis libero velit sit amet est. Aenean sed magna nec ex fermentum luctus. Mauris scelerisque, nulla vel euismod vulputate, mi risus commodo mauris, eu pulvinar metus purus eu nulla.
-
-    Phasellus tempus elit eu elit condimentum blandit. Duis a odio nec urna feugiat venenatis quis sit amet turpis. Nulla facilisi. Cras pellentesque augue in tincidunt ultricies. Curabitur auctor, purus eu pulvinar blandit, <br> <br> velit sapien interdum risus, a finibus turpis nisi eu lectus. Nunc congue, eros nec condimentum iaculis, mi sapien tempus tellus, nec vestibulum ex nulla eu velit. Proin iaculis leo vel fringilla sagittis. Suspendisse feugiat orci a nisl cursus cursus. In quis consectetur tellus,<br><br> a bibendum justo. Nulla facilisi.
-    
-    Note: Ce texte est généré de manière aléatoire et n'a pas de sens cohérent. C'est simplement un exemple de remplissage utilisé pour des mises en page et des maquettes.</p>
+   <p style="display: block;position: relative;float: none;width: 90vw;margin:5vw;height:10vw;" class="esv">Galaxy Run est un jeu mobile palpitant dans la lignée de jeux comme Subway Surfers. Plongez dans une aventure intergalactique infinie où vous incarnez un coureur cosmique esquivant des obstacles et collectant des bonus dans l'espace. Voici ses principales caractéristiques.</p>
     </div>
     <table style="margin-left: 10vw;">
         <tr>
