--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>majd saidi</title>
     <link rel="stylesheet" href="cvstyle.css">
+    <script>window.danteEmbed = "https://dante-ai.com/embed/?kb_id=25bec372-0a9a-4479-9a93-865dee4e8542&token=f94aad4d-fc87-4d78-822f-835592101462&modeltype=gpt-4-omnimodel-mini&mode=false&logo=ZmFsc2U%3D&bubble=true&bubbleopen=false"</script><script src="https://dante-ai.com/bubble-embed.js"></script>
 </head>
 
 
