--- a/index.html
+++ b/index.html
@@ -5,7 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>majd saidi</title>
     <link rel="stylesheet" href="cvstyle.css">
-    <script>window.danteEmbed = "https://dante-ai.com/embed/?kb_id=25bec372-0a9a-4479-9a93-865dee4e8542&token=f94aad4d-fc87-4d78-822f-835592101462&modeltype=gpt-4-omnimodel-mini&mode=false&logo=ZmFsc2U%3D&bubble=true&bubbleopen=false"</script><script src="https://dante-ai.com/bubble-embed.js"></script>
+    <script type="text/javascript">
+  (function(d, t) {
+      var v = d.createElement(t), s = d.getElementsByTagName(t)[0];
+      v.onload = function() {
+        window.voiceflow.chat.load({
+          verify: { projectID: '67982ccc980195fd31d13f12' },
+          url: 'https://general-runtime.voiceflow.com',
+          versionID: 'production'
+        });
+      }
+      v.src = "https://cdn.voiceflow.com/widget-next/bundle.mjs"; v.type = "text/javascript"; s.parentNode.insertBefore(v, s);
+  })(document, 'script');
+</script>
 </head>
 
 
