--- a/index.html
+++ b/index.html
@@ -18,10 +18,16 @@
       v.src = "https://cdn.voiceflow.com/widget-next/bundle.mjs"; v.type = "text/javascript"; s.parentNode.insertBefore(v, s);
   })(document, 'script');
 </script>
+    <script>
+        function f(){
+            alert("vous avez clicker")
+        }
+    </script>
 </head>
 
 
 <body>
+    <input type="button" value="click" onclick="f()">
    <div class="contenu">
     <div class="cover">
         <img class="back" src="cover.jpg" alt="">
